refactor(sqs): modernize stream collector in MessageHeaderUtils